# rp2040_xoc

./: CMakeLists.txt  README.md  SoE.c  XOC.c  XOC.uf2
Pi Bench/: README.md  dhrystonePiA6
Results/: README.md  results.txt
Results/Pi Results/: Dhry_Pi1B.txt  Dhry_ZeroW.txt
XOC/: CMakeLists.txt  XOC.c  XOC.uf2
XOC_dhry/: CMakeLists.txt  dhry1.c  dhry1.uf2  dhry_2.c
clock_stat/: CLOCK_STAT.uf2  CMakeLists.txt  clock_stat.c
